refactor: reorganize project structure for PRML translation

--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,28 @@
-# 前言
+---
+title: "项目说明"
+description: "PRML 中文导读项目主页，包含翻译范围、术语规范与阅读建议。"
+---
 
-欢迎阅读我的数学笔记。这是一本用 Quarto 制作的网页书。
+# 项目说明
+
+这是一个围绕 *Pattern Recognition and Machine Learning* (PRML) 的中文导读项目，目标是建立可持续迭代的学习翻译与推导笔记。
+
+## 范围与定位
+
+- 本站内容用于学习交流，聚焦概念解释、公式推导与实践理解。
+- 章节组织按原书主线推进，便于长期维护与增量更新。
+- 本站为非官方内容，原书版权归原作者与出版社所有。
+
+## 术语约定
+
+- Pattern Recognition: 模式识别
+- Machine Learning: 机器学习
+- Prior: 先验分布
+- Posterior: 后验分布
+- Likelihood: 似然
+
+## 阅读建议
+
+- 先读每章「本章目标」与「关键问题」。
+- 对照公式时优先看符号附录，避免记号混淆。
+- 每章末尾建议补一段自己的理解与疑问，便于后续修订。
